Restructure nullability annotations for the project (#8587)
- Make use of the gradle task from Neo to automatically generate package infos that make everything be Nullmarked (non-null)
- Removed manual NotNull/NonNull references, as well as our custom annotations that targeted lots of things at once
- Switched to jspecify annotations
- Work on fixing nullability warnings/issues related to missing nullable annotations
- Use Neo's Minecraft Dependencies repo to query the versions of certain deps for our annotation processor